kubernates.tf
resource "kubernetes_deployment" "deployment_001" {
  metadata {
    name = "terraform-kubernates-deployment"
    labels = {
      test = "MyExampleApp"
    }
  }

  spec {
    replicas = 2

    selector {
      match_labels = {
        test = "MyExampleApp"
      }
    }

    template {
      metadata {
        labels = {
          test = "MyExampleApp"
        }
      }

      spec {
        container {
          image = "nginx:1.7.8"
          name  = "example"

          resources {
              limits = {
                cpu    = "0.5"
                memory = "256Mi"
              }
              requests = {
                cpu    = "200m"
                memory = "128Mi"
              }
          }
          liveness_probe {
            http_get {
              path = "/nginx_status"
              port = 80

              http_header {
                name  = "X-Custom-Header"
                value = "Awesome"
              }
            }

            initial_delay_seconds = 3
            period_seconds        = 3
          }
        }
      }
    }
  }
}

resource "kubernetes_service" "eks_service_001" {
  metadata {
    name = "terraform-kubernates-service"
  }
  spec {
    selector = {
      test = "MyExampleApp"
    }
    port {
      port        = 80
      target_port = 80
    }

    type = "LoadBalancer"
  }
}
